--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,10 @@
-
-@font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1490944432772'); /* IE9*/
-  src: url('iconfont.eot?t=1490944432772#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1490944432772') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1490944432772') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1490944432772#iconfont') format('svg'); /* iOS 4.1- */
-}
-
-.iconfont {
-  font-family:"iconfont" !important;
-  font-size:16px;
-  font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-xin:before { content: "\e64b"; }
-
-.icon-next:before { content: "\e65d"; }
-
-.icon-prev:before { content: "\e61b"; }
-
-
-
 *{
 	margin: 0;
 	padding: 0;
 	list-style: none;
+}
+body{
+	background: rgba(0,0,0,.9);
 }
 ul,li,p{
 	margin: 0;
@@ -42,6 +20,11 @@ header{
 	width: 100%;
 	background: #fff;
 }
+.header_content{
+	width: 100%;
+	z-index: 20;
+	background: #fff;
+}
 nav ul {
 	width: 100%;
 	text-align: center;
@@ -49,7 +32,14 @@ nav ul {
 nav ul li a{
 	font-size: 16px;
 	line-height: 100px;
-
+	color: #777777;
+}
+.redline{
+	width: 80%;
+	height: 3px;
+	background:  #b71524;
+	margin: 0 auto;
+	margin-top: -3px;
 }
 .marryTime{
 	background: #000;
@@ -153,18 +143,60 @@ footer p{
 	text-align: center;
 	line-height: 30px;
 }
-.home_map{
-	background: #403f3b;
+.return_top{
+	width: 50px;
+	height: 50px;
+	position: fixed;
+	bottom: 200px;
+	right: 100px;
+	z-index: 22;
+	display: none;
+	cursor: pointer;
 }
-.home_map .container{
+.return_top .icon-fanhuidingbu{
+	color: rgba(255,255,255,.7);
+	font-size: 50px;
+}
+.footermodual{
+	width: 100%;
+	margin: 0;
 	padding: 0;
 }
-.my-map { 
-	margin: 0 auto; 
-	width: 100%; 
-	height: 500px; 
+.watchtower_banner img{
+	width: 100%;
 }
-.my-map .icon { background: url(http://lbs.amap.com/console/public/show/marker.png) no-repeat; }
-.my-map .icon-cir { height: 31px; width: 28px; }
-.my-map .icon-cir-red { background-position: -11px -5px; }
-.amap-container{height: 100%;}
+.watchtower_photos ul li:first-child{
+	border-top: 0px solid #fff;
+}
+.watchtower_photos ul li:last-child{
+	border-bottom: 0px solid #fff;
+}
+.watchtower_photos ul li{
+	border-bottom: 8px solid #fff;
+	border-top: 8px solid #fff;
+	margin: 0;
+	padding: 0;
+}
+.watchtower_photos ul li img{
+	width: 100%;
+}
+.watchtower_title{
+	width: 400px;
+    height: 68px;
+    line-height: 68px;
+    font-size: 40px;
+    color: #b5a56b;
+    text-align: center;
+    margin: 50px auto;
+    border-bottom: solid 3px #b5a56b;
+}
+.watchtower_body{
+	background: #fff;
+	background: url(../img/13.jpg) fixed center top;
+    height: auto;
+}
+.container_content_one{
+	cursor: pointer;
+	height: 516px;
+	width: 100%;
+}
