--- a/css/style.css
+++ b/css/style.css
@@ -200,12 +200,40 @@ footer p{
 	height: 516px;
 	width: 100%;
 }
-/* 个人计划 */
-.personal_plan{
-	width: 100%;
-	height: auto;
-	background: url(../images/pages-bg.jpg);
+/* 相册 */
+.abbum{
+	text-align: center;
+	background: #fff;
 }
-.signin_bottom_right{
-	background: #e4e4e4;
+.abbum img{
+	height: 100%;
+}
+.nav{
+	width: 100%;
+	font-size: fixed;
+	left: 0;
+	top: 0;
+	background: rgba(0,0,0,.6);
+	z-index: 5555;
+}
+.nav .aubum_box{
+	overflow: auto;
+	zoom: 1;
+	width: 90%;
+	margin: 0 auto;
+}
+.abbum{
+	position: fixed;
+	left: 0;
+	top: 0;
+}
+
+.aubum_box li{
+	width: 15%;
+	height: 100px;
+	float: left;
+	line-height: 100px;
+	color: #FFF;
+	font-size: 18px;
+	text-align: center;
 }
